--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,11 @@
 
-		    PvPGN 1.7.x Major Changes And New Features
+		    BNETD-X 1.7.x Major Changes And New Features
 		  ==============================================
 
  o Westwood Online (WOL) support
 
-    This is a historic moment in the life of the PvPGN project. For the first 
-    time a different gaming network than Battle.net is supported with PvPGN. 
+    This is a historic moment in the life of the BNETD-X project. For the first 
+    time a different gaming network than Battle.net is supported with BNETD-X. 
     Current supports includes almost complete support for Tiberian Sun (TS) 
     and basic support for Red Alert 2 (RA2) and Yuri's Revenge (YR).
 
@@ -15,7 +15,7 @@
 
  o Instant startup (partial)
 
-    PvPGN now can startup in a lot lesser time than before, this is due to 
+    BNETD-X now can startup in a lot lesser time than before, this is due to 
     code changes which make it not load all accounts at startup. This 
     improvement should be mostly noticed on very high number of accounts 
     servers. Note that currently this happens only to SQL storage types 
@@ -23,7 +23,7 @@
 
  o Optimized account loading/saving codes
 
-    Account loading/saving codes have been rewritten allowing PvPGN to scale 
+    Account loading/saving codes have been rewritten allowing BNETD-X to scale 
     a lot better with a high number of online users (ie lower CPU usage).
 
  o Better game result calculation
@@ -35,7 +35,7 @@
 
  o New WIN32 compiler/enviroment support
 
-    Now you can compile PvPGN under WIN32 using complete GPL/free build tools 
+    Now you can compile BNETD-X under WIN32 using complete GPL/free build tools 
     by using Dev-C++ project and additional tools (mingw, etc).
 
  o Optimized handling of D2 clients
@@ -46,20 +46,20 @@
  o Optimized timers codes
 
     Timers codes have been rewritten so the most used functions complete a 
-    lot faster than before. This improves PvPGN CPU usage a lot because some 
-    timers functions are used very often inside PvPGN.
+    lot faster than before. This improves BNETD-X CPU usage a lot because some 
+    timers functions are used very often inside BNETD-X.
 
  o Memory management changes and optimizations
 
     There has been added some memory management wrappers functions which 
     never fail and thus the calling codes were simplified a lot by removing 
-    checks to memory allocation failures. If memory allocation fails PvPGN 
+    checks to memory allocation failures. If memory allocation fails BNETD-X 
     tries to recover by programming an immediate shutdown and cleaning up 
     some safe memory.
 
  o Changed codes to use logged in username instead of account username
 
-    This change makes PvPGN use the username introduced at login (with the 
+    This change makes BNETD-X use the username introduced at login (with the 
     exact case as in login) instead of the account name. This solves some 
     bugs (like could not edit profile in D2 if logged in with different case) 
     and also gets us more close to Battle.Net.
@@ -75,7 +75,7 @@
 
     The list API has been changed and the codes have been optimized so it 
     will remove elements from the list upon request and not later, thus 
-    eliminating a O(n) search and thus making PvPGN a lot faster.
+    eliminating a O(n) search and thus making BNETD-X a lot faster.
 
  o Unified and extended address translation system
 
@@ -96,18 +96,18 @@
 
  o Rewritten low level socket multiplexing codes (fdwatch2)
 
-    The codes which deal with how PvPGN knows which sockets are available for 
+    The codes which deal with how BNETD-X knows which sockets are available for 
     reading/writing have been rewritten with a new interface which does not 
     presume (like the old codes) that the underlying OS allocates socket 
     values "close" (ex. WIN32 systems do not while most Unix based systems do 
     so). The new codes eliminates this presumtion and thus allows WIN32 hosts 
-    to support a large number of connections as PvPGN supported Unix based 
+    to support a large number of connections as BNETD-X supported Unix based 
     platforms.
 
  o Added more storage types: SQLite3 and ODBC
 
-    With 1.7.x PvPGN now supports besides the MySQL/PostgreSQL SQL backends 
+    With 1.7.x BNETD-X now supports besides the MySQL/PostgreSQL SQL backends 
     also SQLite3 (www.sqlite.org) and ... ODBC SQL engine !! This means that 
-    theoretically now you should be able to use PvPGN with almost any SQL 
+    theoretically now you should be able to use BNETD-X with almost any SQL 
     engine as long as an ODBC driver exists for it.
  
